# QVPaint

./: .gitignore  CMakeLists.txt  LICENSE.LGPLv3  LICENSE.WTFPLv2-EXCEPT  QVPaint.pro  README.md  THIRD-PARTY  config.h  main.cpp  qvpaction.cpp  qvpaction.h  qvpdocument.cpp  qvpdocument.h  qvpdot.cpp  qvpdot.h  qvpellipse.cpp  qvpellipse.h  qvpellipticarc.cpp  qvpellipticarc.h  qvpline.cpp  qvpline.h  qvpmainwindow.cpp  qvpmainwindow.h  qvprasterizedshape.cpp  qvprasterizedshape.h  qvpshape.cpp  qvpshape.h  qvpshapeactions.cpp  qvpshapeactions.h  resource.qrc
